# Arp

./: .env.example  .gitattributes  .gitignore  .mcp.json  BOM.md  CV_GATE_INTEGRATION.md  ENCLOSURE_ROADMAP.md  HANDOFF.md  HARDWARE_BUILD_GUIDE.md  INSTALL.md  INSTALLER_README.md  MCP_SETUP.md  METHODOLOGY.md  PROJECT_STATUS.md  README.md  README.md.old  START_HERE.md  TESTING_GUIDE.md  TEST_PLAN_MIDI_PASSTHROUGH.md  arpeggiator.py  backup.py  boot.py  button_handler.py  clock_handler.py  code.py  display.py  fix_mcp.sh  install.py  install_libs.py  main.py  main_v2.py  requirements.txt  settings.py  todo  watch.sh
.claude/: settings.json
.claude/commands/: start.md  tidyup.md
.claude/handoff/: SESSION_27_HANDOFF.md
VintageCapture/: ARP_FIRMWARE_SPEC.md  CMakeLists.txt  LATENCY_COMPENSATION.md  Makefile  README.md  WORKFLOW.md  analyzer_test
VintageCapture/Source/: AnalyzerTest.cpp  DurationAnalyzer.cpp  DurationAnalyzer.h  KeystrokeCapture.cpp  KeystrokeCapture.h  MonitoringEngine.cpp  MonitoringEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
_archive/: HANDOFF_20251022_214500.md
_archive/old_root_modules/: button_handler.py  code.py
_hardware_files/: FUSION360_BUILD_GUIDE.md  SCRIPT_INSTALLATION_GUIDE.md  generate_enclosure.py  generate_simple_enclosure.py
arp/core/: arpeggiator.py  clock.py  input_router.py  layers.py  translation.py
arp/drivers/: cv_gate.py  midi_custom_cc.py  midi_output.py
arp/ui/: buttons.py  display.py  menu.py
arp/utils/: config.py
docs/: ARCHITECTURE.md  CLAUDE_CODE_SETUP.md  FIRMWARE_UPDATE.md  OCCUPANCY.md  PRODUCTION_ROADMAP.md  PROJECT_STATUS.md  SESSION_10_SUMMARY.md  SESSION_11_HANDOFF.md  SESSION_12_HANDOFF.md  SESSION_13_HANDOFF.md  UI_ARCHITECTURE.md
docs/architecture/: POLYPHONY_DESIGN.md  TIMING_ARCHITECTURE.md
docs/context/: CIRCUITPYTHON_MASTERY.md  CIRCUITPYTHON_SETUP_COMPLETE.md  CONTEXT.md  SESSION_HANDOFF_METHODOLOGY.md
docs/features/: CV_GATE_INTEGRATION.md  ENCLOSURE_ROADMAP.md
docs/hardware/: ASSEMBLY_PROTOCOL.md  (+36 more)
hardware/: ACTUAL_BREADBOARD_CONFIGURATION.md  ACTUAL_DESIGN_VS_DOCS.md  ACTUAL_HARDWARE_TRUTH.md  COMPONENT_VALUE_AUDIT.md  EASYEDA_PCB_DESIGN_GUIDE.md  FINAL_PROTECTION_RECOMMENDATION.md  INPUT_SAFETY_CHECKLIST.md  POWER_SYSTEM_SIMPLIFICATION.md  Prisme - Nov 2025.eprj  README_HARDWARE_DOCS.md  SCHEMATICS_READY_FOR_PCB.md  SESSION_25_COMPLETE_UPDATE.md
scripts/: README.md  backup.py  check_dependencies.py  create_bundle.sh  deploy.py  deploy_pin_test.sh  monitor_m4.sh  monitor_serial.py  read_serial.py  simple_test.py
tests/: boot_test.py  breadboard_system_test.py  button_clean_test.py  button_simple_test.py  button_test_featherwing.py  comprehensive_pin_test.py  conftest.py  connection_test.py  cv_1v_octave_test.py  cv_jack_installation_test.py  cv_moog_source_test.py  cv_scope_test.py  display_class_sh1107_test.py  display_integration_test.py  full_system_test.py  gate_dual_output_test.py  gate_vtrig_strig_test.py  hardware_tests.py  hello_test.py  i2c_debug_scan.py  i2c_scan_display.py  i2c_scan_mcp4728.py  i2c_scan_simple.py  i2c_scan_with_blink.py  i2c_shared_scan.py  i2c_simple_scan.py  i2c_timing_test.py  integration_test_debug.py  led_blink_test.py  library_import_test.py  mcp4728_auto_detect_test.py  mcp4728_basic_test.py  mcp4728_correct_voltage_test.py  mcp4728_simple_output_test.py  mcp4728_with_oled_display.py  midi_active_routing_test.py  midi_connection_test.py  midi_input_test.py  midi_loopback_test.py  midi_oled_integration_test.py  (+36 more)
(+138 files in other folders)
